--- a/detail.html
+++ b/detail.html
@@ -4,165 +4,141 @@
 
 <%init>
 my $information;
+my $species_genome_id = $db->MySelect(statement => "SELECT species, genome_id FROM gene_info WHERE accession = ?", type => 'row', vars => [$accession]);
+my $species = $species_genome_id->[0];
+my $genome_id = $species_genome_id->[1];
+my $mt = "mfe_$species";
+my $bt = "boot_$species";
+$information->{species} = $species;
+$information->{accession} = $accession;
 $information->{slipstart} = $slipstart;
 $db->Remove_Duplicates($accession);
+
 my ($detail_stmt, $info);
 if (!defined($slipstart)) {
-  $detail_stmt = qq"SELECT * FROM mfe WHERE accession = ? ORDER BY start, seqlength DESC, algorithm DESC";
-  $info = $db->MySelect(statement => $detail_stmt, vars => [$accession,]);
+  $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id ORDER BY start, seqlength DESC, algorithm DESC";
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,], type => 'list_of_hashes');
 } else {
-  $detail_stmt = qq"SELECT * FROM mfe WHERE accession = ? AND start = ? ORDER BY seqlength DESC, algorithm DESC";
-  $info = $db->MySelect(statement => $detail_stmt, vars => [$accession,$slipstart]);
+  $detail_stmt = qq"SELECT $mt.*, gene_info.genename FROM $mt,gene_info WHERE gene_info.genome_id = ? AND gene_info.genome_id = $mt.genome_id AND $mt.start = ? ORDER BY seqlength DESC, algorithm DESC";
+  $info = $db->MySelect(statement => $detail_stmt, vars => [$genome_id,$slipstart], type => 'list_of_hashes');
 }
-$information->{genome_id} = $info->[0]->[1];
-my $genome_stmt = qq"SELECT genename,species FROM genome where id = ?";
-my $genome_info = $db->MySelect(statement => $genome_stmt,vars => [$information->{genome_id}]);
-$information->{genename} = $genome_info->[0]->[0];
-$information->{species} = $genome_info->[0]->[1];
-my $species = $information->{species};
-foreach my $structure (@{$info}) {
-  my $mfe_id = $structure->[0];
-  $information->{mfe_id} = $mfe_id;
-  $information->{mfe} = $structure->[12];
-  my $boot_table = "boot_$species";
-  my $boot_stmt = qq"SELECT mfe_values, mfe_mean, mfe_sd, mfe_se, zscore FROM $boot_table WHERE mfe_id = ?";
-  my $boot = $db->MySelect(statement => $boot_stmt, type => 'row', vars=>[$mfe_id],);
-  if (!defined($boot) and $config->{do_boot} == 2) {
-    ## Add it to the webqueue
-    $db->Set_Queue(id => $information->{genome_id}, queue_table => 'webqueue');
-  } elsif (!defined($boot) and $config->{do_boot} == 1) {
-#
+foreach my $entry_count (0 .. $#$info) {
+    foreach my $info_key (keys %{$info->[$entry_count]}) {
+	$information->{$info_key} = $info->[$entry_count]->{$info_key};
+    }
+    $information->{pk_input} =~ tr/atgcu/ATGCU/;
+    $information->{parsed} =~ s/\s+//g;
+    my @in = split(//, $information->{pk_input});
+    my @par = split(//, $information->{parsed});
+    my $misc = new SeqMisc(sequence => \@in);
+    $information->{gc_content} = $misc->{gc_content};
+    $information->{gc_stems} = $misc->Get_GC(\@in, \@par);
+    my $delta = $information->{seqlength} - length($information->{parsed});
+    $information->{parsed} .= '.' x $delta;
+    $information->{brackets} .= '.' x $delta;
+    $information->{minus_string} = HTMLMisc::Make_Minus($information->{sequence});
+    $information->{color_minus} = HTMLMisc::Color_Stems($information->{minus_string}, $information->{parsed}, $config->{graph_stem_colors});
+#    $information->{minus_stop} = HTMLMisc::Color_Stems($information->{color_minus}, $information->{parsed}, $config->{graph_stem_color});
+    $information->{numbers} = HTMLMisc::Make_Nums($information->{sequence});
+    $information->{pk_input_colored} = HTMLMisc::Color_Stems($information->{sequence}, $information->{parsed}, $config->{graph_stem_colors});
+    $information->{brackets_colored} = HTMLMisc::Color_Stems($information->{parens}, $information->{parsed}, $config->{graph_stem_colors});
+    $information->{parsed_colored} = HTMLMisc::Color_Stems($information->{parsed}, $information->{parsed}, $config->{graph_stem_colors});
 
-    $accession = $structure->[2];
-    $m->comp('generate_boot.html');  ## , width => 11, height => 1,
-    my $data = ">tmp
-$structure->[8]
+    ## Check the status of the randomized distribution
+    my $boot_stmt = qq"SELECT mfe_values, mfe_mean, mfe_sd, mfe_se, zscore FROM $bt WHERE mfe_id = ?";
+    my $boot = $db->MySelect(statement => $boot_stmt, type => 'row', vars=>[$information->{id}],);
+    
+    if (!defined($boot) and $config->{do_boot} == 2) {
+	## Add it to the webqueue
+	$db->Set_Queue(id => $information->{genome_id}, queue_table => 'webqueue');
+    } elsif (!defined($boot) and $config->{do_boot} == 1) {
+	$m->comp('generate_boot.html', information => $information);  ## , width => 11, height => 1,
+	my $data = ">tmp
+$information->{sequence}
 ";
-    my $inputfile = $db->Sequence_to_Fasta($data);
-    my $boot = new Bootlace(genome_id => $structure->[1],
-			    nupack_mfe_id => $structure->[0],
-			    pknots_mfe_id => $structure->[0],
-			    inputfile => $inputfile,
-			    species => $structure->[3],
-			    accession => $structure->[2],
-			    start => $structure->[5],
-			    seqlength => $structure->[7],
-			    iterations => $config->{boot_iterations},
-			    boot_mfe_algorithms => $config->{boot_mfe_algorithms},
-			    randomizers => $config->{boot_randomizers},);
-    my $bootlaces = $boot->Go();
-    $db->Put_Boot($bootlaces);
-    chdir($config->{base});
-  }
-  if (!defined($accession)) {
-    print "Accession is not defined";
-    return(0);
-  }
-  if (!defined($slipstart)) {
-    #  print "The slipstart is not defined";
-    $slipstart = '';
-  }
-  my $acc_slip = qq"$accession-$slipstart";
-  my $feynman_pic = new PRFGraph(config=> $config, mfe_id => $mfe_id, accession => $accession);
-  $information->{feynman_url} = $feynman_pic->Picture_Filename(type=> 'feynman', url => 'url',);
-  my $feynman_output_filename = $feynman_pic->Picture_Filename(type => 'feynman',);
-  my $feynman_dimensions = {};
-  if (!-r $feynman_output_filename) {
-    $feynman_dimensions = $feynman_pic->Make_Feynman();
-  } else {
-    $feynman_dimensions = $feynman_pic->Get_Feynman_ImageSize($feynman_output_filename);
-  }
-  
-  if (defined($boot)) {
-    my $mfe_values = $boot->[0];
-    $mfe_values =~ s/^\s+//g;
-    my @mfe_values_array = split(/\s+/, $mfe_values);
-    my $chart = new PRFGraph(config => $config, real_mfe => $information->{mfe},
-			   list_data => \@mfe_values_array, accession  => $acc_slip, mfe_id => $mfe_id,);
-    my $ppcc_values = $chart->Get_PPCC();
-    my $filename = $chart->Picture_Filename(type => 'distribution');
-    my $pre_charturl = $chart->Picture_Filename(type => 'distribution', url => 'url');
-    $information->{charturl} = $pre_charturl;
-    if (!-r $filename) {
-      $chart = $chart->Make_Distribution();
+	my $inputfile = $db->Sequence_to_Fasta($data);
+	eval "use Bootlace; 1";
+	$boot = new Bootlace(config => $config,
+			     genome_id => $information->{genome_id},
+			     nupack_mfe_id => $information->{id},
+			     pknots_mfe_id => $information->{id},
+			     inputfile => $inputfile,
+			     species => $information->{species},
+			     accession => $information->{accession},
+			     start => $information->{start},
+			     seqlength => $information->{seqlength},
+			     iterations => $config->{boot_iterations},
+			     boot_mfe_algorithms => $config->{boot_mfe_algorithms},
+			     randomizers => $config->{boot_randomizers},);
+	my $bootlaces = $boot->Go();
+	$db->Put_Boot($bootlaces);
+	chdir($config->{base});
     }
-    $information->{mfe_mean} = $boot->[1];
-    $information->{mfe_sd} = $boot->[2];
-    $information->{mfe_se} = $boot->[3];
-    $information->{boot_db} = $boot->[4];
-    if ($information->{mfe_sd} == 0) {
-      $information->{zscore} = 0;
+    ## Theoretically we should now have the randomized distribution set,
+    ## But for weird data this will not be, so after we make the feynman we
+    ## will revisit this...
+    my $acc_slip = qq"$accession-$information->{slipstart}";
+    my $feynman_pic = new PRFGraph(config=> $config, mfe_id => $information->{id}, accession => $accession);
+    $information->{feynman_url} = $feynman_pic->Picture_Filename(type=> 'feynman', url => 'url',);
+    my $feynman_output_filename = $feynman_pic->Picture_Filename(type => 'feynman',);
+    my $feynman_dimensions = {};
+    if (!-r $feynman_output_filename) {
+	$feynman_dimensions = $feynman_pic->Make_Feynman();
     } else {
-      $information->{mfe} = 0 if (!defined($information->{mfe}));
-      $information->{mfe_mean} = 0 if (!defined($information->{mfe_mean}));
-      $information->{mfe_sd} = 1 if (!defined($information->{mfe_sd}));
-      $information->{zscore} = sprintf("%.2f", ($information->{mfe} - $information->{mfe_mean}) / $information->{mfe_sd});
+	$feynman_dimensions = $feynman_pic->Get_Feynman_ImageSize($feynman_output_filename);
     }
-    $information->{randmean} = sprintf("%.1f", $information->{mfe_mean});
-    $information->{randse} = sprintf("%.1f", $information->{mfe_se});
-    $information->{ppcc} = sprintf("%.4f", $ppcc_values);
-  } else {  ##Boot is not defined!
-    $information->{chart} = "undef";
-    $information->{charturl} = qq"$config->{base}/html/no_data.gif";
-    $information->{mfe_mean} = "undef";
-    $information->{mfe_sd} = "undef";
-    $information->{mfe_se} = "undef";
-    $information->{zscore} = "UNDEF";
-    $information->{randmean} = "UNDEF";
-    $information->{randse} = "UNDEF";
-    $information->{ppcc} = "UNDEF";
-  }
-  $information->{algorithm} = $structure->[4];
-  $information->{slipstart} = $structure->[5];
-  $information->{slipsite} = $structure->[6];
-  $information->{seqlength} = $structure->[7];
-  my $pk_input = $structure->[8];
-  $pk_input =~ tr/atgcu/ATGCU/;
-  $information->{pk_input} = $pk_input;
-  $information->{pk_output} = $structure->[9];
-  my $parsed = $structure->[10];
-  $parsed =~ s/\s+//g;
-  my $brackets = $structure->[11];
-  $information->{pairs} = $structure->[13];
-  my $knotp = $structure->[14];
-  $information->{barcode} = $structure->[15];
-  my @in = split(//, $pk_input);
-  my @par = split(//, $parsed);
-  my $misc = new SeqMisc(sequence=>\@in);
-  $information->{gc_content} = $misc->{gc_content};
-  $information->{gc_stems} = $misc->Get_GC(\@in, \@par);
-  
-  my $delta = $information->{seqlength} - length($parsed);
-  $information->{parsed} .= '.' x $delta;
-  $information->{brackets} .= '.' x $delta;
-  
-  my $feynman = $feynman_pic;
-  my $minus_string = HTMLMisc::Make_Minus($pk_input);
-  my $color_minus = HTMLMisc::Color_Stems($minus_string, $parsed, $config->{graph_stem_colors});
-  $information->{color_minus} = $color_minus;
-  my $minus_stop = HTMLMisc::Color_Stems($color_minus, $parsed, $config->{graph_stem_colors});
-  my $numbers = HTMLMisc::Make_Nums($pk_input);
-  $pk_input = HTMLMisc::Color_Stems($pk_input, $parsed, $config->{graph_stem_colors});
-  $brackets = HTMLMisc::Color_Stems($brackets, $parsed, $config->{graph_stem_colors});
-  $parsed = HTMLMisc::Color_Stems($parsed, $parsed, $config->{graph_stem_colors});
-  $information->{minus_string} = $minus_string;
-  $information->{color_minus} = $color_minus;
-  $information->{minus_stop} = $minus_stop;
-  $information->{numbers} = $numbers;
-  $information->{pk_input} = $pk_input;
-  $information->{brackets} = $brackets;
-  $information->{parsed} = $parsed;
-  $information->{feynman_height} = $feynman_dimensions->{height};
-  $information->{feynman_width} = $feynman_dimensions->{width};
-  $information->{accession} = $accession;
-  $m->comp('single_detail.html', information=>$information,);
-}    ## End foreach structure in the database
+    $information->{feynman_height} = $feynman_dimensions->{height};
+    $information->{feynman_width} = $feynman_dimensions->{width};
+
+    ## Revisiting the Boot and making the graph for it
+    if (defined($boot)) {
+	my $mfe_values = $boot->[0];
+	$mfe_values =~ s/^\s+//g;
+	my @mfe_values_array = split(/\s+/, $mfe_values);
+	my $chart = new PRFGraph(config => $config, real_mfe => $information->{mfe},
+				 list_data => \@mfe_values_array, accession  => $acc_slip, mfe_id => $information->{id},);
+	my $ppcc_values = $chart->Get_PPCC();
+	my $filename = $chart->Picture_Filename(type => 'distribution');
+	my $pre_charturl = $chart->Picture_Filename(type => 'distribution', url => 'url');
+	$information->{charturl} = $pre_charturl;
+	if (!-r $filename) {
+	    $chart = $chart->Make_Distribution();
+	}
+	$information->{mfe_mean} = $boot->[1];
+	$information->{mfe_sd} = $boot->[2];
+	$information->{mfe_se} = $boot->[3];
+	$information->{boot_db} = $boot->[4];
+	if ($information->{mfe_sd} == 0) {
+	    $information->{zscore} = 0;
+	} else {
+	    $information->{mfe} = 0 if (!defined($information->{mfe}));
+	    $information->{mfe_mean} = 0 if (!defined($information->{mfe_mean}));
+	    $information->{mfe_sd} = 1 if (!defined($information->{mfe_sd}));
+	    $information->{zscore} = sprintf("%.2f", ($information->{mfe} - $information->{mfe_mean}) / $information->{mfe_sd});
+	}
+	$information->{randmean} = sprintf("%.1f", $information->{mfe_mean});
+	$information->{randse} = sprintf("%.1f", $information->{mfe_se});
+	$information->{ppcc} = sprintf("%.4f", $ppcc_values);
+    } else {  ##Boot is not defined!
+	$information->{chart} = "undef";
+	$information->{charturl} = qq"$config->{base}/html/no_data.gif";
+	$information->{mfe_mean} = "undef";
+	$information->{mfe_sd} = "undef";
+	$information->{mfe_se} = "undef";
+	$information->{zscore} = "UNDEF";
+	$information->{randmean} = "UNDEF";
+	$information->{randse} = "UNDEF";
+	$information->{ppcc} = "UNDEF";
+    }
+    ## Now we should have the randomized distribution picture created.
+    $m->comp('single_detail.html', information=>$information,);
+}  ## End foreach structure in the database
 my $num_algos = 0;
 $num_algos++ if ($config->{do_pknots} == 1);
 $num_algos++ if ($config->{do_nupack} == 1);
 $num_algos++ if ($config->{do_hotknots} == 1);
 my $num_expected_mfes = scalar(@{$config->{seqlength}}) * $num_algos;
-my $num_have = $db->MySelect(statement => qq/SELECT count(id) FROM mfe WHERE accession = '$accession' AND start = '$slipstart'/, type => 'single');
+my $num_have = $db->MySelect(statement => qq"SELECT count(id) FROM $mt WHERE accession = '$accession' AND start = '$slipstart'", type => 'single');
 $db->Add_Webqueue($information->{genome_id}) if ($num_have < $num_expected_mfes);
 </%init>
 
