--- a/list_slipsites.html
+++ b/list_slipsites.html
@@ -23,7 +23,8 @@
  </td>
 </tr>
 % my ($slipseq, $pknotscount, $id, $slipstart);
-% my $slipsites_stmt = qq"SELECT distinct start, slipsite, count(id) FROM mfe WHERE accession = ? AND start < (SELECT orf_stop FROM genome WHERE accession = ?) GROUP BY start ORDER BY start";
+% my $mt = "mfe_$species";
+% my $slipsites_stmt = qq"SELECT distinct start, slipsite, count(id) FROM $mt WHERE accession = ? AND start < (SELECT orf_stop FROM genome WHERE accession = ?) GROUP BY start ORDER BY start";
 % my $slipsite_information = $db->MySelect(statement => $slipsites_stmt, vars => [$accession, $accession],);
 % my $table = "landscape_$species";
 % my $landscape_num = $db->MySelect(statement => "SELECT count(id) FROM $table WHERE accession = '$accession'", type => 'single');
