--- a/fold.html
+++ b/fold.html
@@ -65,7 +65,7 @@ sub tmp_fold {
   my $pic_output = "$config->{base}/folds/$new_filename.svg";
   my $feynman_pic = new PRFGraph(sequence=>$sequence, parsed => $parsed, output => $output);
   my $dimensions = $feynman_pic->Make_Feynman($pic_output, 0);
-  open (HANDLE, ">$input_path.html") or die("Cannot open HANDLE $new_filename.html $!");
+  open (HANDLE, ">$input_path.html") or Callstack(message => "Cannot open HANDLE $new_filename.html");
   print HANDLE qq(The minimum free using $function energy is: $mfe<br>
  $output<br>
 <embed id=\"feynman\" src=\"$new_filename.svg\" align=\"bottom\"></embed>);
